--- a/app/src/main/res/layout-v22/fragment_home.xml
+++ b/app/src/main/res/layout-v22/fragment_home.xml
@@ -9,7 +9,8 @@
     <SearchView
         android:id="@+id/sv_home"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"/>
 
     <LinearLayout
         android:layout_width="match_parent"
